[package]
name = "pool-party"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pool_party"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
devnet = ["raydium-clmm-cpi/devnet"]
# localnet = ["raydium-clmm-cpi/devnet"]

[dependencies]
anchor-lang = "=0.31.0"
anchor-spl = { version = "=0.31.0", features = ["metadata", "memo"] }
raydium-clmm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-clmm-cpi", branch = "anchor-0.31.0" }
uint = { git = "https://github.com/raydium-io/parity-common", package = "uint" }
ahash = "=0.8.11"
num-bigint = "0.4"

[dev-dependencies]
quickcheck = "0.9"
